Archive2/af/bbbdc62bcf1ab3/output
main.cpp:4:26: error: conflicting declaration 'int datum [3]'
 extern int datum[num_data];
                          ^
main.cpp:3:5: error: 'datum' has a previous declaration as 'int datum [2]'
 int datum[] = {3, 4};
     ^
